--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.16.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "connect-flash": "^0.1.1",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
     "material-ui": "^0.18.1",
